# buscar

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  r_buscar_env.yaml
.github/workflows/: ci.yml  publish.yml
buscar/: checks.py  data_utils.py  metrics.py  preprocess.py
notebooks/: nb-configs.yaml
notebooks/0.download-data/: 1.download-CPJUMP1-data.ipynb  1.download-CPJUMP1-metadata.ipynb  1.download-data.ipynb  2.preprocessing.ipynb  3.subset-jump-controls.ipynb  dl-configs.yaml  download-data.sh
notebooks/0.download-data/nbconverted/: 1.download-CPJUMP1-data.py  1.download-CPJUMP1-metadata.py  1.download-data.py  2.preprocessing.py  3.subset-jump-controls.py
notebooks/1.compound-prioritization/: 1.compound-prioritization.ipynb  1.signatures.ipynb  2.assess-heterogeneity.ipynb  3.refinement.ipynb  4.measure-phenotypic-activity.ipynb  CJUMP1_analysis.py  run-components.sh
notebooks/1.compound-prioritization/nbconverted/: 1.compound-prioritization.py  1.signatures.py  2.assess-heterogeneity.py  3.refinement.py  4.measure-phenotypic-activity.py
notebooks/2.cfret-analysis/: 1.cfret-pilot-analysis.ipynb  1.cfret-pilot-buscar-analysis.ipynb  1.generate-umap.ipynb  2.cfret_screen_analysis.ipynb  2.generate-aggregate-profiles.ipynb  2.generate-umap-plots.ipynb  3.generate-centroid.ipynb  3.generate-pca-umap-components.ipynb  4.CFReT-screen-moa-analysis.ipynb  4.assess-signature-significance.ipynb  4.generate-pca-umap-components.ipynb  5.CFRet-screen-umap-embeddings.ipynb  7.CFRet-screem-emd-analysis.ipynb  nohup.out  r-analysis.yaml  r_buscar_env.yaml  run-buscar-cfret-pilot-analysis.sh
notebooks/2.cfret-analysis/experiments/: 1.on-and-off-pca-and-umap-plots.ipynb
notebooks/2.cfret-analysis/experiments/nbconverted/: 1.on-and-off-pca-and-umap-plots.py
notebooks/2.cfret-analysis/logs/: cfret_moa_ap_score.tsv
notebooks/2.cfret-analysis/nbconverted/: 1.cfret-pilot-analysis.py  1.cfret-pilot-buscar-analysis.py  2.cfret_screen_analysis.py  2.generate-aggregate-profiles.py  3.generate-centroid.py  3.generate-pca-umap-components.py  4.CFReT-moa-analysis.py  4.assess-signature-significance.py  4.generate-pca-umap-components.py
notebooks/2.cfret-analysis/plots/: 2.data-rep-heatmap.ipynb  2.sc-agg-consensus-pca-plot.ipynb  3.cfret-signature-volcano-plot.ipynb  3.cluster-label-sankey-diagram.ipynb  4.sc-agg-consensus-pca-plot.ipynb  run-plotting.sh
notebooks/2.cfret-analysis/plots/figures/: celltype_treatment_cluster_sankey.html  phenotype_well_treatment_cluster_sankey.html  treatment_cluster_sankey.html
notebooks/2.cfret-analysis/plots/nbconverted/: 1.on-and-off-pca-and-umap-plots.r  2.data-rep-heatmap.r  2.sc-agg-consensus-pca-plot.r  3.cfret-signature-volcano-plot.r  3.cluster-label-sankey-diagram.r  4.sc-agg-consensus-pca-plot.r
notebooks/3.cfret-screen-analysis/: 1.cfret_screen_analysis.ipynb  3.cfret-screen-ranking-analysis.ipynb  6.CFRet-screen-umap-plots.ipynb
notebooks/3.cfret-screen-analysis/nbconverted/: 1.cfret_screen_analysis.py
notebooks/3.mitocheck-analysis/: 0.explore-mitocheck-data.ipynb  1.buscar-analysis.ipynb  2.leave-one-gene-out-analysis.ipynb  run-mitocheck-buscar.sh
notebooks/3.mitocheck-analysis/nbconverted/: 0.explore-mitocheck-data.py  1.buscar-analysis.py  2.leave-one-gene-out-analysis.py
notebooks/3.mitocheck-analysis/plots/: 1.heat-map-on-off-scores.ipynb  2.gene-ranking-relationship.ipynb  3.linear-modeling-ranking-and-proportion.ipynb  run-mitocheck-plots.sh
notebooks/3.mitocheck-analysis/plots/all-plots/gene-ranking-relationships/: kendall_w_real_permutation_summary.csv  kendall_w_real_shuffled_permutation_summary.csv  profile_specificity_real.csv  profile_specificity_real_vs_shuffled.csv
notebooks/3.mitocheck-analysis/plots/nbconverted/: 1.heat-map-on-off-scores.r  2.gene-ranking-relationship.r  3.linear-modeling-ranking-and-proportion.r
notebooks/4.cpjump1-analysis/: 1.generate-on-off-signatures.ipynb  2.assess-heterogeneity.ipynb  2.run_buscar_rankings_base_on_moa.ipynb  3.calculate-on-off-scores.ipynb  4.run_buscar_rankings_base_on_moa.ipynb  5.cpjump_u2os_MoA_analysis.ipynb  run-cpjump1-buscar-analysus.sh
notebooks/4.cpjump1-analysis/nbconverted/: 1.generate-on-off-signatures.py  2.assess-heterogeneity.py  2.run_buscar_rankings_base_on_moa.py  3.calculate-on-off-scores.py  4.run_buscar_rankings_base_on_moa.py  5.cpjump_u2os_MoA_analysis.py
recipe/: meta.yaml
src/buscar/: __init__.py  data_utils.py  metrics.py  preprocess.py  signatures.py
tests/: conftest.py  test_hit_identifcation.py  test_preprocessing.py  test_utils.py
utils/: data_utils.py  heterogeneity.py  identify_hits.py  io_utils.py  metrics.py  preprocess.py  refinement.py  signatures.py  utils.py  validator.py
utils/params/: clustering.py
