[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "buscar"
version = "0.1.0"
description = "A Python framework for prioritizing compounds in high-content imaging drug screening using single-cell profiles."
authors = [{name = "Erik Serrano", email = "erikishere3@gmail.com"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.14"
keywords = ["single-cell", "drug-screening", "image-profiling", "phenotypic-screening"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "beartype>=0.21.0,<0.22.0",
  "numpy>=2.2.5,<3.0.0",
  "polars>=1.29.0,<2.0.0",
  "pot>=0.9.5,<0.10.0",
  "scikit-learn>=1.6.1,<2.0.0",
  "scipy>=1.15.3,<2.0.0",
  "statsmodels>=0.14.4,<0.15.0",
  "umap-learn>=0.5.9",
  "igraph>=0.11.9", 
  "leidenalg>=0.10.2", 
  "louvain>=0.8.2", 
  "optuna>=4.5.0", 
  "pycytominer>=1.2.3,<2.0.0", 
  "scanpy>=1.11.4"
]

[project.optional-dependencies]
dev = ["pre-commit>=4.2.0", "pytest>=8.4.1", "pytest-cov>=6.0.0", "ruff>=0.8.1"]

[project.urls]
Homepage = "https://github.com/WayScience/buscar"
Repository = "https://github.com/WayScience/buscar"
Issues = "https://github.com/WayScience/buscar/issues"

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
source = ["buscar"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
ignore_missing_imports = true

[tool.poetry]
packages = [
  {include = "buscar", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
beartype = "^0.21.0"
numpy = ">=2.2.5,<3.0.0"
polars = ">=1.29.0,<2.0.0"
pot = "^0.9.5"
scikit-learn = ">=1.6.1,<2.0.0"
scipy = ">=1.15.3,<2.0.0"
statsmodels = ">=0.14.4,<0.15.0"
umap-learn = "^0.5.9.post2"
igraph = {version = "^0.11.9", optional = true}
ipykernel = {version = "^6.29.5", optional = true}
jupyter = {version = "^1.1.1", optional = true}
leidenalg = {version = "^0.10.2", optional = true}
louvain = {version = "^0.8.2", optional = true}
matplotlib = {version = ">=3.10.3,<4.0.0", optional = true}
mypy = {version = "^1.14.1", optional = true}
narwhals = {version = "^2.4.0", optional = true}
optuna = {version = "^4.5.0", optional = true}
pandas = {version = ">=2.2.0,<3.0.0", optional = true}
pre-commit = {version = "^4.2.0", optional = true}
pycytominer = {version = ">=1.2.3,<2.0.0", optional = true}
pytest = {version = "^8.4.1", optional = true}
pytest-cov = {version = "^6.0.0", optional = true}
ruff = {version = "^0.8.1", optional = true}
scanpy = {version = "^1.11.4", optional = true}
tqdm = {version = "^4.67.1", optional = true}


[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
