[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "buscar"
version = "0.1.0"
description = "A Python framework for prioritizing compounds in high-content imaging drug screening using single-cell profiles."
authors = [{name = "Erik Serrano", email = "erik.serrano@cuanschutz.edu"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.14"
keywords = ["single-cell", "drug-screening", "image-profiling", "phenotypic-screening"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "beartype>=0.21.0,<0.22.0",
  "numpy>=2.2.5,<3.0.0",
  "polars>=1.29.0,<2.0.0",
  "pot>=0.9.5,<0.10.0",
  "scikit-learn>=1.6.1,<2.0.0",
  "scipy>=1.15.3,<2.0.0",
  "statsmodels>=0.14.4,<0.15.0",
  "umap-learn>=0.5.9",
  "pycytominer>=1.2.3,<2.0.0", 
]

[project.optional-dependencies]
dev = ["pre-commit>=4.2.0", "pytest>=8.4.1", "pytest-cov>=6.0.0", "ruff>=0.8.1"]

[project.urls]
Homepage = "https://github.com/WayScience/buscar"
Repository = "https://github.com/WayScience/buscar"
Issues = "https://github.com/WayScience/buscar/issues"

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
source = ["buscar"]

[tool.poetry]
packages = [
  {include = "buscar", from = "src"}
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
